--- a/src/pages/register-member.f7.html
+++ b/src/pages/register-member.f7.html
@@ -9,7 +9,7 @@
           <span class="if-not-md">Back</span>
         </a>
       </div>
-      <div class="title">{{title}}</div>
+      <div class="title">{{user.firstName}}</div>
     </div>
   </div>
   <div class="page-content login-screen-content">
@@ -58,11 +58,6 @@
 </template>
 <script>
 export default {
-  data: function () {
-    // Must return an object
-    return {
-      title: 'Daftar Member'
-    }
-  }
+
 };
 </script>
