add detail pages

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <meta name="theme-color" content="#007aff">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
-  <title>My App</title>
+  <title>My App anak hebat</title>
   
   
   
