--- a/src/pages/books-detail.f7.html
+++ b/src/pages/books-detail.f7.html
@@ -17,50 +17,122 @@
         <img src="https://cdn.framework7.io/placeholder/sports-1024x1024-1.jpg" alt="" width="100%">
         <h3>Nama Buku</h3>
         <div class="text-currency-primary"><span class="text-currency-format">Rp</span>90.000</div>
-        <table>
-          <tbody>
-            <tr>
-              <td width="30%">Judul</td>
-              <td>You Are Overthinking! Pada Dasarnya, Semua Akan Baik-Baik Saja</td>
-            </tr>
-            <tr>
-              <td>Nomor ISBN</td>
-              <td>978-623-244-206-1</td>
-            </tr>
-            <tr>
-              <td>Penerbit</td>
-              <td>Pengembangan Diri</td>
-            </tr>
-            <tr>
-              <td>Kategori</td>
-              <td>Self Help</td>
-            </tr>
-            <tr>
-              <td>Jenis Cover</td>
-              <td>Ivory (Soft Cover)</td>
-            </tr>
-            <tr>
-              <td>Kertas Isi</td>
-              <td>Bookpapper</td>
-            </tr>
-            <tr>
-              <td>Tebal Buku</td>
-              <td>220 Halaman</td>
-            </tr>
-            <tr>
-              <td>Berat Buku</td>
-              <td>200 gram</td>
-            </tr>
-            <tr>
-              <td>Dimensi</td>
-              <td>14 X 20</td>
-            </tr>
-            <tr>
-              <td>Lokasi Stok</td>
-              <td>Gudang Anak Hebat Indonesia</td>
-            </tr>
-          </tbody>
-        </table>
+
+        <!-- detail buku -->
+        <div class="list">
+          <ul>
+            <li>
+              <div class="item-content">
+                <div class="item-inner">
+                    <div class="item-title">
+                      Nomor ISBN
+                    </div>
+                    <div class="item-after">
+                      978-623-244-206-1
+                    </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="item-content">
+                <div class="item-inner">
+                    <div class="item-title">
+                      Penerbit
+                    </div>
+                    <div class="item-after">
+                      Pengembangan Diri
+                    </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="item-content">
+                <div class="item-inner">
+                    <div class="item-title">
+                      Kategori
+                    </div>
+                    <div class="item-after">
+                      Self Help
+                    </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="item-content">
+                <div class="item-inner">
+                    <div class="item-title">
+                      Jenis Cover
+                    </div>
+                    <div class="item-after">
+                      Ivory 210 gram
+                    </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="item-content">
+                <div class="item-inner">
+                    <div class="item-title">
+                      Kertas Isi
+                    </div>
+                    <div class="item-after">
+                      Bookpapper
+                    </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="item-content">
+                <div class="item-inner">
+                    <div class="item-title">
+                      Tebal Buku
+                    </div>
+                    <div class="item-after">
+                      276 Halaman
+                    </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="item-content">
+                <div class="item-inner">
+                    <div class="item-title">
+                      Berat Buku
+                    </div>
+                    <div class="item-after">
+                      300 gram
+                    </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="item-content">
+                <div class="item-inner">
+                    <div class="item-title">
+                      Dimensi
+                    </div>
+                    <div class="item-after">
+                      14 X 20
+                    </div>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="item-content">
+                <div class="item-inner">
+                    <div class="item-title">
+                      Lokasi Stok
+                    </div>
+                    <div class="item-after">
+                      Gudang Anak Hebat Indonesia
+                    </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <!-- .end detail buku -->
+        
       <div class="block-title">Events Handling</div>
       <div class="block block-strong">
         <a href="#" class="button button-raised" @click="openAlert">Open Alert</a>
